# sqlex

./: .gitignore  .pinact.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  pinact.yml  release-please.yml  release.yml
Formula/: sqlex.rb
src/: checker.rs  cli.rs  error.rs  highlight.rs  hints.rs  i18n.rs  linter.rs  main.rs
tests/: integration_test.rs
video/: package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx  SqlexDemo.tsx  Terminal.tsx  TerminalLine.tsx
